[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rusty_mosaic"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
module-name = "rusty_mosaic._lib"
features = ["pyo3/extension-module"]


[package.package_data]
rusty_mosaic = ["__assets__/*"]
